syntax = "proto3";

package hades.api.registry.v1;

import "google/protobuf/timestamp.proto";

option go_package = "gen/api/registry/v1";

enum EVisibility {
  E_VISIBILITY_UNSPECIFIED = 0;
  E_VISIBILITY_PUBLIC = 1;
  E_VISIBILITY_PRIVATE = 2;
}

enum EState {
  E_STATE_UNSPECIFIED = 0;
  E_STATE_ACTIVE = 1;
  E_STATE_DEPRECATED = 2;
}

message Module {
  string id = 1;

  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;

  // module name
  // unique
  string name = 4;

  // module owner id
  string owner_id = 5;

  // module visibility
  EVisibility visibility = 6;

  // module description
  string description = 7;

  // module default branch
  string default_branch = 8;

  EState state = 9;

  string url = 10;

  string default_label_name = 11;
}

message ModuleRef {
  string id = 1;
  string owner = 2;
  string module = 3;
}

message CreateModuleByNameRequest {
  string name = 1;
  EVisibility visibility = 2;
  string description = 3;
  string default_branch = 4;
}

message CreateModuleByNameResponse {
  Module module = 1;
}

service ModuleService {
  rpc CreateModuleByName(CreateModuleByNameRequest) returns (CreateModuleByNameResponse);
}
